[project]
name = "nisargadatta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blurhash",
    "certifi",
    "chardet",
    "charset-normalizer",
    "click",
    "decorator",
    "dparse",
    "idna",
    "joblib",
    "mastodon-py",
    "nltk",
    "packaging",
    "pyparsing",
    "python-dateutil",
    "python-magic",
    "pytz",
    "pyyaml",
    "regex",
    "requests",
    "six",
    "toml",
    "tqdm",
    "urllib3",
]
